--- a/src/app/components/media/media.component.html
+++ b/src/app/components/media/media.component.html
@@ -1,10 +1,10 @@
 <div class="dc_pg_spcHead">
     <div class="main-container">
        <div class="dc_pgHead_wrap text-center" style="background-image:url(./assets/images/head-bg.jpg);">
-          <h1 class="dc_pg_title">Media & News</h1>
+          <h1 class="dc_pg_title">{{mediadata.pagetitle}}</h1>
           <ol class="breadcrumb dc_cstBread f-w-B justify-content-center">
              <li class="breadcrumb-item"><a href="#">Home</a></li>
-             <li class="breadcrumb-item active">Media</li>
+             <li class="breadcrumb-item active">{{mediadata.pagetitle}}</li>
           </ol>
        </div>
     </div>
@@ -13,7 +13,7 @@
           <div class="row row_gutter_30">
              <div class="col-md-6">
                 <div class="dc_txtSummary">
-                   <h2 class="headingSec line_H_1 mrg-b-30">What Press Says <br> about DCC</h2>
+                   <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="heading"></h2>
                 </div>
                 <div class="hrLine mrg-b-30"></div>
              </div>
@@ -22,43 +22,41 @@
              <div class="col-md-6">
                 <div class="dc_txtSummary">
                    <div class="dc_txt_summary dc_last_p text-justify">
-                      <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us once and we will become friends.</p>
-                      <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us once and we will become friends.</p>
+                    <p [innerHTML]="left_content"></p>
                    </div>
                 </div>
              </div>
              <div class="col-md-6">
                 <div class="dc_txtSummary">
                    <div class="dc_txt_summary dc_last_p text-justify">
-                      <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us once and we will become friends.</p>
-                      <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us once and we will become friends.</p>
+                   <p [innerHTML]="right_content"></p>
                    </div>
                 </div>
              </div>
           </div>
-          <div class="row rowSpace dc_spacer_t_90">
+          <div class="row rowSpace dc_spacer_t_90" *ngFor="let data of medianews">
              <div class="col-md-6">
                 <div class="teamPage_wrap mar-b-30">
-                   <img src="./assets/images/vacation-boarding.png" class="w-100">
+                   <img [src]="data.image.link" class="w-100" [alt]="data.image.alt">
                 </div>
              </div>
              <div class="col-md-6">
                 <div class="aboutDCC_wrap mar-b-30">
                    <div class="dccSubTitle f-w-B opacity-5 mrg-b-30 text-uppercase">
-                      29TH AUG, 2021
+                     {{data.date}}
                    </div>
                    <div class="mrg-b-30">
-                      <h2 class="f-w-B f-s-24 line_H_1"> DCC Animal Hospital Now Opened in New Delhi.   </h2>
+                      <h2 class="f-w-B f-s-24 line_H_1"> {{data.name}} </h2>
                    </div>
                    <div class="bannerTxt teamTxt">
-                      <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us once and we will become friends.</p>
+                      <p>{{data.description}}</p>
                    </div>
-                   <a href="#" class="dc_readmore font-rubik">
+                   <a [href]="data.readmore" class="dc_readmore font-rubik">
                    Read more
                    </a>
                 </div>
              </div>
-             <div class="col-md-6">
+             <!-- <div class="col-md-6">
                 <div class="teamPage_wrap mar-b-30">
                    <img src="./assets/images/vacation-boarding.png" class="w-100">
                 </div>
@@ -120,9 +118,9 @@
                    Read more
                    </a>
                 </div>
-             </div>
+             </div> -->
           </div>
        </div>
     </div>
 </div>
-<app-footer-top></app-footer-top>
+<app-footer-top [dataString]="footersection"></app-footer-top>
