--- a/src/app/layout/footer-top/footer-top.component.html
+++ b/src/app/layout/footer-top/footer-top.component.html
@@ -6,27 +6,24 @@
                 <div class="dccSubTitle f-w-B opacity-5 mrg-b-60 text-uppercase">
                 </div>
                 <div class="mrg-b-30 ">
-                   <h2 class="f-w-B headingSec line_H_1"> Our Intent Is To be <br /> Available At Anytime Of The
-                      Day
+                   <h2 class="f-w-B headingSec line_H_1" [innerHTML]="heading"> 
                    </h2>
                 </div>
                 <div class="hrLine mrg-b-30"></div>
                 <div class="bannerTxt">
-                   <p> Download our mobile application on App Store & Playstore <br /> and keep your animal
-                      healthy. 
-                   </p>
+                   <p [innerHTML]="content"></p>
                 </div>
              </div>
           </div>
           <div class="col-md-2 text-right">
              <div class="app-store">
-                <a href="#" class="storeLink">
-                <img src="../../../assets/images/app-store.svg" alt="app store" class="w-100" />
+                <a [href]="footersection.app_store_link" class="storeLink">
+                <img [src]="footersection.app_store_image.link" [alt]="footersection.app_store_image.alt" class="w-100" />
                 </a>
              </div>
              <div class="google-play">
-                <a href="#" class="storeLink">
-                <img src="../../../assets/images/google-play.svg" alt="app store" class="w-100" />
+                <a [href]="footersection.play_store_link" class="storeLink">
+                <img [src]="footersection.play_store_image.link" [alt]="footersection.play_store_image.alt" class="w-100" />
                 </a>
              </div>
           </div>
