--- a/src/app/components/contact-gurgaon/contact-gurgaon.component.html
+++ b/src/app/components/contact-gurgaon/contact-gurgaon.component.html
@@ -1,135 +1,131 @@
+<div class="dc_pg_spcHead">
 
-
-    <div class="dc_pg_spcHead">
-
-        <div class="main-container">
-            <div class="dc_pgHead_wrap text-center" style="background-image:url(/assets/images/head-bg.jpg);">
-                <h1 class="dc_pg_title">Contact Us</h1>
-                <ol class="breadcrumb dc_cstBread f-w-B justify-content-center">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item">Contact us</li>
-                    <li class="breadcrumb-item active">Gurgaon</li>
-                </ol>
-            </div>
+    <div class="main-container">
+        <div class="dc_pgHead_wrap text-center" style="background-image:url(assets/images/head-bg.jpg);">
+            <h1 class="dc_pg_title">Contact Us</h1>
+            <ol class="breadcrumb dc_cstBread f-w-B justify-content-center">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item">Contact us</li>
+                <li class="breadcrumb-item active">{{contact.pagetitle}}</li>
+            </ol>
         </div>
-
-        <div class="dc_spacer_t_90 dc_spacer_b_60">
-            <div class="main-container">
-                <div class="row row_gutter_30">
-                    <div class="col-md-6">
-                        <div class="dc_txtSummary">
-                            <h2 class="headingSec line_H_1 mrg-b-30">We Are Just A Phone Call Away</h2>
-                        </div>
-                        <div class="hrLine mrg-b-30"></div>
-                    </div>
-                </div>
-
-                <div class="row row_gutter_30">
-                    <div class="col-md-6">
-                        <div class="dc_txtSummary">
-                            <div class="dc_txt_summary dc_last_p text-justify">
-                                <p>We understand how you feel when you pooch is not feeling good. That’s why we exist.
-                                    Get your four legged animal to visit us once and we will become friends.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="dc_txtSummary">
-                            <div class="dc_txt_summary dc_last_p text-justify">
-                                <p>We understand how you feel when you pooch is not feeling good. That’s why we exist.
-                                    Get your four legged animal to visit us once and we will become friends.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="dc_spacer_t_30 dc_spacer_b_30">
-            <div class="main-container">
-                <div class="btnSec text-center">
-                    <div class="btnSec_wra d-inline">
-                        <a href="#" class="pagebtn f-w-B">
-                            All Services
-                        </a>
-                    </div>
-                    <div class="btnSec_wra d-inline">
-                        <a href="#" class="pagebtn pagebtngreen f-w-B">
-                            Book an appointment
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="dc_spacer_t_30 dc_spacer_b_30">
-            <div class="main-container">
-                <div class="row row_gutter_30">
-                    <div class="col-md-6">
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="teamPage_wrap mar-b-30">
-                                    <img src="/assets/images/vacation-boarding.png" class="w-100">
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="teamPage_wrap mar-b-30">
-                                    <img src="/assets/images/vacation-boarding.png" class="w-100">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="careers-form">
-                            <div class="dccSubTitle f-w-B opacity-5 mrg-b-30 text-uppercase">
-                                GURGAON
-                            </div>
-                        </div>
-                        <div class="dc_txtSummary">
-                            <h2 class="headingSec line_H_1 mrg-b-30">DCC Animal Hospital & Petcare</h2>
-                        </div>
-                        <div class="contnt opacity-5 mrg-b-30">
-                            Jagdamba Farm, Carterpuri Marg, Sector 23A, Gurugram, Haryana – 122016
-                        </div>
-                        <div class="mrg-b-30">
-                            <h2 class="f-w-B f-s-24 line_H_1"> Quick Contacts </h2>
-                            <div class="f-s-18 qCont">
-                                <a href="tel:(+91) 9311560101"><strong>Gurgaon:</strong> (+91) 9311560101</a>
-                            </div>
-                            <div class="f-s-18 qCont">
-                                <a href="tel:(+91) 9311560101"><strong>GK Landline:</strong> (+91) 9311560101</a>
-                            </div>
-                            <div class="f-s-18 qCont">
-                                <a href="mailto:info@dccpets.in"><strong>Email:</strong> info@dccpets.in</a>
-                            </div>
-                        </div>
-                        <div class="dc_txtSummary mrg-b-30">
-                            <h2 class="f-w-B f-s-24 line_H_1 mrg-b-30">Opening Hours</h2>
-                            <div class="f-s-18 qCont">
-                                <div><strong>Gurgaon:</strong> 10AM - 5PM daily.</div>
-                            </div>
-                        </div>
-                        <div class="dc_txtSummary mrg-b-30">
-                            <div class="f-s-18 qCont">* Grooming closed on Tuesdays.</div>
-                            <div class="f-s-18 qCont">* Clinic closed on Sundays.</div>
-                        </div>
-                        <div class="btnSec">
-
-                            <div class="btnSec_wra d-inline">
-                                <a href="#" class="ml-0 pagebtn pagebtnblue f-w-B">
-                                    Get Direction
-                                </a>
-                            </div>
-                            <div class="btnSec_wra d-inline">
-                                <a href="#" class="mar-l-30 pagebtn f-w-B">
-                                    Make An Appointment
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
+
+    <div class="dc_spacer_t_90 dc_spacer_b_60">
+        <div class="main-container">
+            <div class="row row_gutter_30">
+                <div class="col-md-6">
+                    <div class="dc_txtSummary">
+                        <h2 class="headingSec line_H_1 mrg-b-30">{{contact.details.heading}}</h2>
+                    </div>
+                    <div class="hrLine mrg-b-30"></div>
+                </div>
+            </div>
+
+            <div class="row row_gutter_30">
+                <div class="col-md-6">
+                    <div class="dc_txtSummary">
+                        <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="contact.details.left_content">
+                      
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="dc_txtSummary">
+                        <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="contact.details.right_content">
+                           
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="dc_spacer_t_30 dc_spacer_b_30">
+        <div class="main-container">
+            <div class="btnSec text-center">
+                <div class="btnSec_wra d-inline" *ngFor="let cn of contact.details.contactlist">
+                    <a href="{{cn.slug}}" class="ml-0 pagebtn pagebtngreen f-w-B">
+                        {{cn.name}}
+                    </a>
+                </div>
+                <!-- <div class="btnSec_wra d-inline">
+                    <a href="#" class="pagebtn f-w-B">
+                        Gurgaon
+                    </a>
+                </div>
+                <div class="btnSec_wra d-inline">
+                    <a href="#" class="pagebtn pagebtngreen f-w-B">
+                        New Delhi
+                    </a>
+                </div> -->
+            </div>
+        </div>
+    </div>
+
+    <div class="dc_spacer_t_30 dc_spacer_b_30">
+        <div class="main-container">
+            <div class="row row_gutter_30">
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="teamPage_wrap mar-b-30">
+                                <img src="{{contact.details.image_1.link}}" class="w-100">
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="teamPage_wrap mar-b-30">
+                                <img src="{{contact.details.image_2.link}}" class="w-100">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="careers-form">
+                        <div class="dccSubTitle f-w-B opacity-5 mrg-b-30 text-uppercase">
+                            GURGAON
+                        </div>
+                    </div>
+                    <div class="dc_txtSummary">
+                        <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="contact.address_heading"> </h2>
+                    </div>
+                    <div class="contnt opacity-5 mrg-b-30" [innerHTML]="contact.address">
+                     
+                    </div>
+                    <div [innerHTML]="contacts"></div>
+
+                    <div class="row rowSpace">
+                        <div class="col-md-12">
+                            <div class="commonLinks text-center contactGet">
+                                <ul class="list-unstyled d-flex flex-wrap">
+
+                                    <li class="contactList-item">
+                                        <div class="dropSec position-relative">
+                                            <a href="javascript:void(0)"
+                                                class="ml-0 pagebtn pagebtnblue dc_btn_min f-w-B getDirection">{{contact.details.button_1_text}}</a>
+                                            <div class="directionList transtn-1 ml-0">
+                                                <ul class="dire_listSec mb-0 list-unstyled">
+                                                    <li class="list-item"> <a href="{{contact.details.locations[0].link}}" class="direLink"> {{contact.details.locations[0].name}}
+                                                        </a> </li>
+                                                    <li class="list-item"> <a href=" {{contact.details.locations[1].link}}" class="direLink">  {{contact.details.locations[1].name}}
+                                                        </a> </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </li>
+
+                                    <li class="contactList-item"><a href="{{contact.details.button_2_link}}" class="pagebtn dc_btn_min f-w-B">{{contact.details.button_2_text}}</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
