--- a/src/app/components/contact-delhi/contact-delhi.component.html
+++ b/src/app/components/contact-delhi/contact-delhi.component.html
@@ -1,110 +1,96 @@
 <div class="dc_pg_spcHead">
-
     <div class="main-container">
-        <div class="dc_pgHead_wrap text-center" style="background-image:url(/assets/images/head-bg.jpg);">
-            <h1 class="dc_pg_title">Contact Us</h1>
-            <ol class="breadcrumb dc_cstBread f-w-B justify-content-center">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item">Contact us</li>
-                <li class="breadcrumb-item active">{{contact.pagetitle}}</li>
-            </ol>
-        </div>
+       <div class="dc_pgHead_wrap text-center" style="background-image:url(/assets/images/head-bg.jpg);">
+          <h1 class="dc_pg_title">Contact Us</h1>
+          <ol class="breadcrumb dc_cstBread f-w-B justify-content-center">
+             <li class="breadcrumb-item"><a href="#">Home</a></li>
+             <li class="breadcrumb-item">Contact us</li>
+             <li class="breadcrumb-item active">{{contact.pagetitle}}</li>
+          </ol>
+       </div>
     </div>
-
     <div class="dc_spacer_t_90 dc_spacer_b_60">
-        <div class="main-container">
-            <div class="row row_gutter_30">
-                <div class="col-md-6">
-                    <div class="dc_txtSummary">
-                        <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="contact.details.heading"></h2>
-                    </div>
-                    <div class="hrLine mrg-b-30"></div>
+       <div class="main-container">
+          <div class="row row_gutter_30">
+             <div class="col-md-6">
+                <div class="dc_txtSummary">
+                   <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="contact.details.heading"></h2>
                 </div>
-            </div>
-
-            <div class="row row_gutter_30">
-                <div class="col-md-6">
-                    <div class="dc_txtSummary">
-                        <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="contact.details.left_content">
-                            
-                        </div>
-                    </div>
+                <div class="hrLine mrg-b-30"></div>
+             </div>
+          </div>
+          <div class="row row_gutter_30">
+             <div class="col-md-6">
+                <div class="dc_txtSummary">
+                   <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="contact.details.left_content">
+                   </div>
                 </div>
-
-                <div class="col-md-6">
-                    <div class="dc_txtSummary">
-                        <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="contact.details.right_content">
-                            
-                        </div>
-                    </div>
+             </div>
+             <div class="col-md-6">
+                <div class="dc_txtSummary">
+                   <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="contact.details.right_content">
+                   </div>
                 </div>
-            </div>
-        </div>
+             </div>
+          </div>
+       </div>
     </div>
-
     <div class="dc_spacer_t_30 dc_spacer_b_30">
-        <div class="main-container">
-            <div class="btnSec text-center">
-                <div class="btnSec_wra d-inline" *ngFor="let cn of contact.details.contactlist">
-                    <a href="{{cn.slug}}" class="ml-0 pagebtn pagebtngreen f-w-B">
-                        {{cn.name}}
-                    </a>
-                </div>
-                
-
-            </div>
-        </div>
+       <div class="main-container">
+          <div class="btnSec text-center">
+             <div class="btnSec_wra d-inline" *ngFor="let cn of contact.details.contactlist">
+                <a href="{{cn.slug}}" class="ml-0 pagebtn pagebtngreen f-w-B">
+                {{cn.name}}
+                </a>
+             </div>
+          </div>
+       </div>
     </div>
-
     <div class="dc_spacer_t_30 dc_spacer_b_30">
-        <div class="main-container">
-            <div class="row row_gutter_30">
-
-                <div class="col-md-6">
-                    <div class="careers-form">
-                        <div class="dccSubTitle f-w-B opacity-5 mrg-b-30 text-uppercase">
-                            NEW DELHI
-                        </div>
-                    </div>
-                    <div class="dc_txtSummary">
-                        <h2 class="headingSec line_H_1 mrg-b-30">DCC Animal Hospital</h2>
-                    </div>
-                    <div class="contnt opacity-5 mrg-b-30">
-                        E-556, Greater Kailash Part-II, New Delhi – 110048
-                    </div>
-                    <div [innerHTML]="contacts"></div>
-                  
-                    <div class="btnSec">
-
-                        <div class="btnSec_wra d-inline">
-                            <a href="#" class="ml-0 pagebtn pagebtnblue f-w-B">
-                                {{contact.details.button_1_text}}
-                            </a>
-                        </div>
-                        <div class="btnSec_wra d-inline">
-                            <a href="#" class="mar-l-30 pagebtn f-w-B">
-                                {{contact.details.button_2_text}}
-                            </a>
-                        </div>
-                    </div>
+       <div class="main-container">
+          <div class="row row_gutter_30">
+             <div class="col-md-6">
+                <div class="careers-form">
+                   <div class="dccSubTitle f-w-B opacity-5 mrg-b-30 text-uppercase">
+                      NEW DELHI
+                   </div>
                 </div>
-
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="teamPage_wrap mar-b-30">
-                                <img src="{{contact.details.image_1.link}}" class="w-100">
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="teamPage_wrap mar-b-30">
-                                <img src="{{contact.details.image_2.link}}" class="w-100">
-                            </div>
-                        </div>
-                    </div>
+                <div class="dc_txtSummary">
+                   <h2 class="headingSec line_H_1 mrg-b-30">DCC Animal Hospital</h2>
                 </div>
-            </div>
-        </div>
+                <div class="contnt opacity-5 mrg-b-30">
+                   E-556, Greater Kailash Part-II, New Delhi – 110048
+                </div>
+                <div [innerHTML]="contacts"></div>
+                <div class="btnSec">
+                   <div class="btnSec_wra d-inline">
+                      <a href="#" class="ml-0 pagebtn pagebtnblue f-w-B">
+                      {{contact.details.button_1_text}}
+                      </a>
+                   </div>
+                   <div class="btnSec_wra d-inline">
+                      <a href="#" class="mar-l-30 pagebtn f-w-B">
+                      {{contact.details.button_2_text}}
+                      </a>
+                   </div>
+                </div>
+             </div>
+             <div class="col-md-6">
+                <div class="row">
+                   <div class="col-12">
+                      <div class="teamPage_wrap mar-b-30">
+                         <img src="{{contact.details.image_1.link}}" class="w-100">
+                      </div>
+                   </div>
+                   <div class="col-12">
+                      <div class="teamPage_wrap mar-b-30">
+                         <img src="{{contact.details.image_2.link}}" class="w-100">
+                      </div>
+                   </div>
+                </div>
+             </div>
+          </div>
+       </div>
     </div>
-
-</div>
+ </div>
+ <app-footer-top [dataString]="footersection"></app-footer-top>
